Fixed layout issue.

--- a/archive_chan/static/archive_chan/css/style.scss
+++ b/archive_chan/static/archive_chan/css/style.scss
@@ -370,6 +370,7 @@ div.content{
     .thread-comment{
         max-height: 100px;
         overflow: hidden;
+        flex: 1;
     }
 }
 
